<resources>
    <string name="app_name">FInal</string>
    <string name="Project_name">JET BOOK STORE</string>
    <string name="Main_page_subtitle">КНИЖНЫЙ ОНЛАЙН-МАГАЗИН</string>
    <string name="Main_Image_Button">Icons_Photo</string>
    <string name="Registr_text">Регистрация</string>
    <string name="Sign_in">Войти</string>
    <string name="Reg_main_icon">Main_Icon</string>
    <string name="Sig_main_icon">Main_Icon</string>
    <string name="Alreaedy_reg">Уже есть аккаунт?</string>
    <string name="Alreaedy_sig">Еще нет аккаунта?</string>
    <string name="User_name">Введите имя пользователя</string>
    <string name="User_pass">Введите пароль</string>
    <string name="User_pass_ver">Введите повторно пароль</string>
    <string name="User_email">Введите email</string>
    <string name="main_menu">Главная</string>
    <string name="bucket_menu">Корзина</string>
    <string name="profile_menu">Профиль</string>
    <string name="ratings_menu">Рейтинги</string>
    <string name="fog_pass">Забыли пароль?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboarduser">DashboardUser</string>
    <string name="dashboardadmin">DashboardAdmin</string>
    <string name="email">email</string>
    <string name="button">button</string>
    <string name="bucket">Корзина</string>
</resources>