<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_7"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Project_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        />

    <TextView
        android:id="@+id/main_page_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Main_page_subtitle"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_page_title"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:id="@+id/main_page_central_photo"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/main_page_photo_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_page_subtitle"
        android:contentDescription="@string/Main_Image_Button" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_page_central_photo"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/registr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registr_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="15dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>