<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardUserActivity">

    <RelativeLayout
        android:id="@+id/toolBarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/toolbr">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/dashboarduser"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/subtitle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/title_tv"
            android:text="@string/email"
            android:textColor="@color/white"/>

        <ImageButton
            android:id="@+id/log_out_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/exit_but_2"
            android:background="@color/blue"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/button" />


    </RelativeLayout>



</RelativeLayout>