<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_back_1"
    tools:context=".activity_sign_in">

    <ImageView
        android:id="@+id/reg_page_main_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/sig_icon_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/Sig_main_icon" />

    <TextView
        android:id="@+id/sig_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_in"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_page_main_icon" />

    <EditText
        android:id="@+id/editText_User_name"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:hint="@string/User_name"
        android:textAlignment="center"
        android:textColorHint="@color/orange"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_fill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sig_page_title"
        android:autofillHints="@string/User_name"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editText_User_pass"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:hint="@string/User_pass"
        android:textColorHint="@color/orange"
        android:textAlignment="center"
        android:background="@drawable/button_fill"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_User_name"
        android:autofillHints="@string/User_pass"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/orange"
        android:text="@string/Sign_in"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="150dp"/>

    <TextView
        android:id="@+id/sig_no_ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Alreaedy_sig"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        android:layout_marginTop="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>